--- a/web/templates/main_view.html
+++ b/web/templates/main_view.html
@@ -205,8 +205,10 @@
                     {{ client.type.name }}
                 </span>
                 <span class="file-number">{{ client.file_number }}</span>
-                {% if client.is_linked %}<span class="link-icon" title="Linked to other clients"><i data-lucide="link" style="width: 14px; height: 14px;"></i></span>{% endif %}
-                <span class="client-name">{{ client.last_name }}, {{ client.first_name }}{% if client.middle_name %} {{ client.middle_name }}{% endif %}</span>
+                <div class="name-group">
+                    {% if client.is_linked %}<span class="link-icon" title="Linked to other clients"><i data-lucide="link" style="width: 14px; height: 14px;"></i></span>{% endif %}
+                    <span class="client-name">{{ client.last_name }}, {{ client.first_name }}{% if client.middle_name %} {{ client.middle_name }}{% endif %}</span>
+                </div>
                 <div class="contact-info">
                     {% if client.email %}
                     <a href="mailto:{{ client.email }}" class="contact-link {{ 'preferred' if client.preferred_contact == 'email' else '' }}" onclick="event.stopPropagation()">
