Hide Choose Logo/Signature buttons when file exists
- Add hidden class toggling for logo and signature choose buttons
- Show 'Logo uploaded' / 'Signature uploaded' with Lucide check-circle icon
- Delete button reveals choose button again
- Uses CSS class pattern consistent with delete button visibility

--- a/web/static/css/settings.css
+++ b/web/static/css/settings.css
@@ -136,6 +136,11 @@ input[type="number"]:focus {
     display: inline-flex !important;
 }
 
+#logo-choose-button.hidden,
+#signature-choose-button.hidden {
+    display: none !important;
+}
+
 /* Remove spinner arrows from number inputs */
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
